RAG_CORE_LOGIC_DONE